<resources>
    <string name="app_name">ProjectMobileAppDevelopment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="hostel">Hostel Dashboard</string>
    <string name="userD">User Dashboard</string>
    <string name="username">Username</string>
    <string name="hostle_name">Hostle Name</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchBarHostel">Search for hostels</string>
    <string name="hostelAvailable">Available Hostels</string>
    <string name="homePageHeading">Where do you want to stay?</string>
</resources>