<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login"
    android:padding="15dp">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/hostle_hub"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/PBAR"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/LoginBtn"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:background="@drawable/rounded_button_background"
        />
    <TextView
        android:id="@+id/registerNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register Now"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="14dp"
        />


</LinearLayout>